Fixed alignment issues in homepage

--- a/styles/style.css
+++ b/styles/style.css
@@ -36,9 +36,10 @@
 .brand-logo img{
 	width: 100px;
 }
-.icon img{
-	float: left;
-	width: 25px;	
+
+.icon .fa{
+	font-size: 24px !important;
+	border:10px solid pink;
 }
 .custom-badge{
 	color: #fff;
@@ -123,4 +124,3 @@
 	width: 40px;
 	height: 40px;
 }
-
